update image and configuration of image pull behaviour

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -28,7 +28,6 @@ spec:
     spec:
       containers:
       - name: python-docker
-        image: python-docker:latest
-        imagePullPolicy: Never
+        image: lstevens/test:latest
         ports:
         - containerPort: 8080
